# LSPlant

lsplant/src/main/jni/: CMakeLists.txt
